// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Chatwit API Contract Tests Backward Compatibility should handle legacy field names gracefully: legacy-field-compatibility 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-legacy",
  },
  "content": "Test message",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Backward Compatibility should maintain compatibility with v1.0.0 schema: v1-schema-compatibility 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-v1",
  },
  "content": "Test",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Error Response Contracts should handle authentication error responses: authentication-error-response 1`] = `
{
  "code": "AUTHENTICATION_ERROR",
  "error": "Invalid access token",
}
`;

exports[`Chatwit API Contract Tests Error Response Contracts should handle rate limit error responses: rate-limit-error-response 1`] = `
{
  "code": "RATE_LIMIT_EXCEEDED",
  "error": "Rate limit exceeded",
  "retry_after": 60,
}
`;

exports[`Chatwit API Contract Tests Error Response Contracts should handle resource not found responses: resource-not-found-response 1`] = `
{
  "code": "RESOURCE_NOT_FOUND",
  "error": "Conversation not found",
  "id": 456,
  "resource": "conversation",
}
`;

exports[`Chatwit API Contract Tests Error Response Contracts should handle server error responses: server-error-response 1`] = `
{
  "code": "INTERNAL_ERROR",
  "error": "Internal server error",
}
`;

exports[`Chatwit API Contract Tests Error Response Contracts should handle validation error responses: validation-error-response 1`] = `
{
  "code": "VALIDATION_ERROR",
  "details": {
    "field": "content_attributes",
    "message": "Interactive content validation failed",
  },
  "error": "Invalid request format",
}
`;

exports[`Chatwit API Contract Tests Instagram API Response Contracts should format Instagram button template correctly: instagram-button-template-format 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-jkl-012",
  },
  "content": "Como posso ajudar você?",
  "content_attributes": {
    "ig": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": "intent:track_order",
                "title": "Rastrear",
                "type": "postback",
                "url": undefined,
              },
              {
                "payload": undefined,
                "title": "Site",
                "type": "web_url",
                "url": "https://example.com",
              },
              {
                "payload": "human_handoff",
                "title": "Suporte",
                "type": "postback",
                "url": undefined,
              },
            ],
            "template_type": "button",
            "text": "Como posso ajudar você?",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Instagram API Response Contracts should format Instagram quick reply correctly: instagram-quick-reply-format 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-ghi-789",
  },
  "content": "Escolha uma das opções abaixo:",
  "content_attributes": {
    "ig": {
      "message": {
        "quick_replies": [
          {
            "content_type": "text",
            "payload": "intent:track_order",
            "title": "Rastrear",
          },
          {
            "content_type": "text",
            "payload": "intent:cancel_order",
            "title": "Cancelar",
          },
          {
            "content_type": "text",
            "payload": "human_handoff",
            "title": "Suporte",
          },
        ],
        "text": "Escolha uma das opções abaixo:",
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Instagram API Response Contracts should limit Instagram quick replies to 3 for UX consistency: instagram-quick-reply-limit 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-limit",
  },
  "content": "Choose an option",
  "content_attributes": {
    "ig": {
      "message": {
        "quick_replies": [
          {
            "content_type": "text",
            "payload": "opt1",
            "title": "Option 1",
          },
          {
            "content_type": "text",
            "payload": "opt2",
            "title": "Option 2",
          },
          {
            "content_type": "text",
            "payload": "opt3",
            "title": "Option 3",
          },
        ],
        "text": "Choose an option",
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Instagram API Response Contracts should validate Instagram HTTPS URL requirement: instagram-https-validation 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-https",
  },
  "content": "Visit our site",
  "content_attributes": {
    "ig": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": undefined,
                "title": "HTTPS Site",
                "type": "web_url",
                "url": "https://example.com",
              },
            ],
            "template_type": "button",
            "text": "Visit our site",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Messenger API Response Contracts should format Messenger button template correctly: messenger-button-template-format 1`] = `
{
  "additional_attributes": {
    "channel": "messenger",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-mno-345",
  },
  "content": "How can I help you?",
  "content_attributes": {
    "messenger": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": "intent:track_order",
                "title": "Track Order",
                "type": "postback",
                "url": undefined,
              },
              {
                "payload": undefined,
                "title": "Website",
                "type": "web_url",
                "url": "https://example.com",
              },
            ],
            "template_type": "button",
            "text": "How can I help you?",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Sanitization Contract Compliance should add fallback button when no valid buttons remain: fallback-button 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-fallback",
  },
  "content": "Choose an option",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "human_handoff",
              "title": "Falar com atendente",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Choose an option",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Sanitization Contract Compliance should ensure unique button titles (case-insensitive): unique-button-titles 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-unique",
  },
  "content": "Choose an option",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "track1",
              "title": "Rastrear",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "cancel",
              "title": "Cancelar",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Choose an option",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Sanitization Contract Compliance should preserve word boundaries when truncating: word-boundary-truncation 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-word-boundary",
  },
  "content": "Esta é uma mensagem muito longa que precisa ser truncada mas deve preservar as palavras completas sem cortar no meio de uma palavra para manter a legibilidade do texto....",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "ok",
              "title": "OK",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Esta é uma mensagem muito longa que precisa ser truncada mas deve preservar as palavras completas sem cortar no meio de uma palavra para manter a legibilidade do texto....",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Schema Version Compliance should always include schema_version in additional_attributes: schema-version-compliance-0 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "test",
  },
  "content": "Test",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Schema Version Compliance should always include schema_version in additional_attributes: schema-version-compliance-1 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "test",
  },
  "content": "Test",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [],
      },
      "body": {
        "text": "Test",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Schema Version Compliance should always include schema_version in additional_attributes: schema-version-compliance-2 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "test",
  },
  "content": "Test",
  "content_attributes": {
    "ig": {
      "message": {
        "quick_replies": [],
        "text": "Test",
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Schema Version Compliance should always include schema_version in additional_attributes: schema-version-compliance-3 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "test",
  },
  "content": "Test",
  "content_attributes": {
    "ig": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [],
            "template_type": "button",
            "text": "Test",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Schema Version Compliance should include required additional_attributes fields: required-additional-attributes 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-required-fields",
  },
  "content": "Test",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Special Response Contracts should format economic mode response correctly: economic-mode-format 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "economic_mode": true,
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-stu-901",
  },
  "content": "Como ajudar?",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "help",
              "title": "Ajuda",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Como ajudar?",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests Special Response Contracts should format human handoff response correctly: human-handoff-format 1`] = `
{
  "additional_attributes": {
    "assign_to_team": "support",
    "channel": "whatsapp",
    "conversation_status": "open",
    "conversation_tags": [
      "ai_handoff",
    ],
    "handoff_reason": "ai_failure",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-pqr-678",
  },
  "content": "Acionei um atendente humano para ajudar você.",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests WhatsApp API Response Contracts should format WhatsApp interactive message correctly: whatsapp-interactive-format 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-abc-123",
  },
  "content": "Como posso ajudar você hoje?",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "intent:track_order",
              "title": "Rastrear Pedido",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "intent:cancel_order",
              "title": "Cancelar Pedido",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "human_handoff",
              "title": "Falar com Atendente",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Como posso ajudar você hoje?",
      },
      "footer": {
        "text": "SocialWise",
      },
      "header": {
        "text": "Atendimento",
        "type": "text",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests WhatsApp API Response Contracts should format WhatsApp simple text message correctly: whatsapp-text-format 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-def-456",
  },
  "content": "Obrigado pela sua mensagem! Um atendente entrará em contato em breve.",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests WhatsApp API Response Contracts should handle WhatsApp text truncation: whatsapp-text-truncation 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-truncation",
  },
  "content": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "ok",
              "title": "OK",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit API Contract Tests WhatsApp API Response Contracts should validate WhatsApp interactive button limits: whatsapp-button-limits 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-limits",
  },
  "content": "Choose an option",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "opt1",
              "title": "Option 1",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "opt2",
              "title": "Option 2",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "opt3",
              "title": "Option 3",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Choose an option",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;
